BUGFIX: Fixed resume render image alignment

--- a/src/assets/css/Resume.css
+++ b/src/assets/css/Resume.css
@@ -1,7 +1,21 @@
 #resumeRender{
-    height:100vh;
-    width:100vw;
+    height:90vh;
+    width:90vw;
     align-items:center;
-    padding-left:30vw;
-    margin-top: 2vh;
+    display: block;
+    margin-top: 1vh;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#resumeRender a {
+    height:inherit;
+    width: inherit;
+    align-items:center;
+}
+
+#resumeRender img {
+    height: inherit;
+    width: inherit;
+    align-items:center;
 }
